# MLCV

./: .pre-commit-config.yaml  Dockerfile  PKG-INFO  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
helios_package/: demo.py  webserver.py
hooks/: pre-commit
test/: test_regression.py  test_shape.py
