[tool.poetry]
name = "helios_package"
version = "0.1.38"
description = "TEST"
authors = ["heliosgrounder"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pillow = "10.2.0"
numpy = "1.24.3"
opencv-python = "4.7.0.72"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.13.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile="black"
force_sort_within_sections = "False"
order_by_type = "False"
