[tool.poetry]
name = "helios_package"
version = "0.3.38"
description = "HELIOS"
authors = ["heliosgrounder"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pillow = "10.2.0"
numpy = "1.24.3"
opencv-python = "4.7.0.72"
tflite-runtime = "2.14.0"
streamlit = "1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
